Fix picture alignment bug on mobile (Safari?)

--- a/content/media/css/style.css
+++ b/content/media/css/style.css
@@ -88,6 +88,7 @@ footer i {
     flex-flow: column wrap;
     justify-content: center;
     align-items: center;
+    text-align: center;
 }
 
 .crossed {
